--- a/Projeto Intel XDK/AcademiaHacktown/www/index.html
+++ b/Projeto Intel XDK/AcademiaHacktown/www/index.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="vendor/waves/waves.min.css" />
 		<link rel="stylesheet" href="vendor/wow/animate.css" />
 		<link rel="stylesheet" href="css/nativedroid2.css" />
-		<link rel="stylesheet" href="css/nativedroid2.color.deep-purple.css" />
+		<link rel="stylesheet" href="css/nativedroid2.color.black.css" />
 		<link rel="stylesheet" href="css/estrutura.css" />
     <style>
         /* following two viewport lines are equivalent to the meta viewport statement above, needed for Windows */
@@ -26,57 +26,46 @@
         @-ms-viewport { user-zoom: fixed ; }           @viewport { user-zoom: fixed ; }
     </style>
 	<script type="application/javascript" src="lib/jquery.min.js"></script>
-    <script type="application/javascript" src="jqm/jquery.mobile-min.js" data-ver="0"></script>
+  <script type="application/javascript" src="jqm/jquery.mobile-min.js" data-ver="0"></script>
 	<script src="vendor/wow/wow.min.js"></script>
 	<script src="js/nativedroid2.js"></script>
 	<script src="nd2settings.js"></script>
 	<script src="vendor/waves/waves.min.js"></script> <!-- pacote de animacoes -->
 	<script src="js/jquery.nicescroll.min.js"></script> <!-- remove as barras de rolagem -->
-    <script src="cordova.js"></script>          <!-- phantom library, needed for Cordova api calls, added during build -->
-    <script src="js/app.js"></script>           <!-- recommended location of your JavaScript code relative to other JS files -->
-    <script src="xdk/init-dev.js"></script>     <!-- normalizes device and document ready events, see README for details -->
-	<script>
-		 Waves.attach('.icones', ['waves-box', 'waves-float', 'waves-light']);
-	</script>
+  <script src="cordova.js"></script>          <!-- phantom library, needed for Cordova api calls, added during build -->
+  <script src="js/app.js"></script>           <!-- recommended location of your JavaScript code relative to other JS files -->
+  <script src="xdk/init-dev.js"></script>     <!-- normalizes device and document ready events, see README for details -->
 </head>
 
 <body>
 <div data-role="page" data-title="Home" id="page">
   <div role="main" class="ui-content  jqm-content jqm-fullwidth" data-inset="false" style="padding: 0">
-    <div class="logo">
-      <div class="row center-xs">
-        <div class="col-xs-4">
-            <div class="box">
-              <img src="images/logo.svg" class="img img-logo">
-            </div>
-        </div>
+    <div class="row center-xs">
+      <div class="col-xs-12">
+          <div class="box">
+            <img src="images/logo.svg" class="img img-logo-big">
+          </div>
       </div>
     </div>
-	  <div class="mainArea wow fadeInUp ">
-      <form>
-        <div class="form-group">
-          <input type="text" class="form-login" placeholder="NICKNAME">
-        </div>
-          <div class="form-group">
-            <input type="password" class="form-login" placeholder="SENHA">
-          </div>
-            <div class="form-group">
-              <a href="#" class="ui-btn clr-btn-green btn-login">ENTRAR</a>
-            </div>
-      </form>
-      <div class="row center-xs ranking">
-        <div class="col-xs-6">
-            <div class="box">
-              <img src="images/btn-grupo.png" class="img img-responsive btn-ranking">
-            </div>
-        </div>
+      <div data-role="footer" data-animate="true" data-position='fixed' style="background: lightgray;" class="wow fadeInUp">
+        <div class="row center-xs ranking">
           <div class="col-xs-6">
               <div class="box">
-                <img src="images/btn-individual.png" class="img img-responsive btn-ranking">
+                <a href="#" class="groupRanking" id="groupRanking">
+                    <img src="images/btn-grupo.png" class="img img-responsive btn-ranking">
+                </a>
               </div>
           </div>
+            <div class="col-xs-6">
+                <div class="box">
+                  <a href="#" class="individualRanking" id="individualRanking">
+                    <img src="images/btn-individual.png" class="img img-responsive btn-ranking">
+                  </a>
+                </div>
+            </div>
+        </div>
       </div>
-	  </div>
+
   </div>
 </div>
 </body>
